--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@duhd4h/global-sdk",
   "license": "MIT",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "🛠 An SDK for building applications on top of pancakeswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -24,6 +24,7 @@
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
+    "keccak256": "^1.0.6",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0"
